# crash_orm

./: CHANGELOG.md  Cargo.toml  LICENSE  Readme.md  deploy.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: code_formatting.yaml  first_issue.yaml  release.yaml  stale.yaml  test.yaml
crash_orm/: Cargo.toml
crash_orm/src/: boxed_sql.rs  column.rs  column_type.rs  column_value.rs  connection.rs  entity.rs  entity_column.rs  entity_vec.rs  error.rs  json.rs  lib.rs  loadable.rs  migration.rs  primary.rs  query.rs  query_column.rs  query_condition.rs  query_entity.rs  raw_query_builder.rs  relations.rs  result_mapping.rs  schema.rs  virtual_column.rs
crash_orm/src/entity_column/: avg_column.rs  max_column.rs  min_column.rs  sum_column.rs
crash_orm/src/migration/: entity.rs  migration.rs  migration_manager.rs
crash_orm/src/query_condition/: bool_condition.rs  compare_condition.rs  equal_condition.rs  in_condition.rs  like_condition.rs  null_condition.rs
crash_orm/src/relations/: macros.rs  one_to_many.rs  one_to_one.rs
crash_orm/src/schema/: column_definition.rs  foreign_key.rs  schema.rs  schema_builder.rs  sql_type.rs  table_definition.rs
crash_orm/src/virtual_column/: avg_column.rs  count_column.rs  length_column.rs  max_column.rs  min_column.rs  round_column.rs  sqrt_column.rs  string_case_column.rs  string_column.rs  string_reverse_column.rs  sum_column.rs  text_cast_column.rs
crash_orm/tests/: basic_test.rs  test_avg.rs  test_bit_vec.rs  test_bool.rs  test_cast.rs  test_compare.rs  test_count.rs  test_custom_primary_key.rs  test_delete.rs  test_empty.rs  test_eui48.rs  test_geo_types.rs  test_group_by.rs  test_in.rs  test_json.rs  test_like.rs  test_many_to_one.rs  test_min_max.rs  test_numeric.rs  test_one_to_one.rs  test_order.rs  test_query.rs  test_raw_query_builder.rs  test_reserved_keywords.rs  test_result_mapping.rs  test_schema_builder.rs  test_select.rs  test_sum.rs  test_time.rs  test_uuid.rs  test_virtual_column.rs
crash_orm_cli/: Cargo.toml
crash_orm_cli/src/: command.rs  config.rs  main.rs
crash_orm_cli/src/command/: init.rs  migrate.rs
crash_orm_cli/templates/: manager.rs.template
crash_orm_derive/: Cargo.toml  Readme.md
crash_orm_derive/src/: entity.rs  entity_derive.rs  lib.rs  loadable.rs  query_derive.rs  reserved_keywords.rs  result_mapping_derive.rs  schema_derive.rs  util.rs
crash_orm_migration/: CHANGELOG.md  Cargo.toml  Readme.md
crash_orm_migration/src/: entity.rs  lib.rs  migration.rs  migration_manager.rs  migrator.rs
crash_orm_rocket/: Cargo.toml  Readme.md
crash_orm_rocket/src/: conn.rs  fairing.rs  fairing_migration.rs  lib.rs
crash_orm_rocket/tests/: test_crud.rs  test_fairing.rs  test_migration_fairing.rs
crash_orm_rocket_derive/: Cargo.toml  Readme.md
crash_orm_rocket_derive/src/: crud_impl.rs  lib.rs
crash_orm_test/: Cargo.toml
crash_orm_test/src/: lib.rs
docs/: Readme.md
docs/Entity/: Readme.md  Relations.md  Types.md
docs/Getting Started/: Readme.md
docs/Migration/: Readme.md
docs/Query/: Readme.md
docs/Schema/: Readme.md
example_app/: Cargo.toml  Readme.md
example_app/src/: main.rs
