[package]
name = "crash_orm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple, typed ORM for Postgres"
homepage = "https://github.com/Cr4shd3v/crash_orm"
documentation = "https://github.com/Cr4shd3v/crash_orm/blob/master/docs/Readme.md"
repository = "https://github.com/Cr4shd3v/crash_orm"
readme = "../Readme.md"
categories = ["database"]
keywords = ["async", "database", "framework", "orm"]

[features]
default = []
with-rust-decimal = ["rust_decimal"]
with-chrono = ["chrono", "tokio-postgres/with-chrono-0_4"]
with-uuid = ["uuid", "tokio-postgres/with-uuid-1"]
with-serde = ["serde", "serde_json", "tokio-postgres/with-serde_json-1"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crash_orm_derive = "^0.1.0"
tokio-postgres = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
rust_decimal = { workspace = true, features = ["db-tokio-postgres"], optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
crash_orm = { path = ".", features = ["with-rust-decimal", "with-chrono", "with-uuid", "with-serde"] }