[package]
name = "crash_orm_derive"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Macros for Crash ORM"
homepage = "https://github.com/Cr4shd3v/crash_orm"
documentation = "https://github.com/Cr4shd3v/crash_orm/blob/master/docs/Readme.md"
repository = "https://github.com/Cr4shd3v/crash_orm"
readme = "Readme.md"
categories = ["database"]
keywords = ["async", "database", "framework", "macro", "orm"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }