[package]
name = "crash_orm_migration"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Migrations for Crash ORM"
homepage = "https://github.com/Cr4shd3v/crash_orm"
documentation = "https://github.com/Cr4shd3v/crash_orm/blob/master/docs/Readme.md"
repository = "https://github.com/Cr4shd3v/crash_orm"
readme = "../Readme.md"
categories = ["database"]
keywords = ["async", "database", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crash_orm = { workspace = true, features = ["with-chrono"] }
chrono.workspace = true