[package]
name = "crash_orm_rocket"
version = "0.6.3"
edition = "2021"

[dependencies]
crash_orm = { workspace = true }
rocket = { workspace = true, features = ["json"] }
crash_orm_rocket_derive = { workspace = true }

[dev-dependencies]
crash_orm_rocket = { path = ".", features = ["migration"] }
crash_orm_test = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[features]
default = []
migration = ["crash_orm/migration"]
