[package]
name = "crash_orm_rocket"
version = "0.7.0"
edition = "2021"

[dependencies]
crash_orm = { workspace = true }
rocket = { workspace = true, features = ["json"] }
crash_orm_rocket_derive = { workspace = true }

[dev-dependencies]
crash_orm_rocket = { path = ".", features = ["migration", "crud"] }
crash_orm_test = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[features]
default = []
migration = ["crash_orm/migration"]
crud = ["crash_orm_rocket_derive/crud"]