[package]
name = "crash_orm_rocket"
version = "0.7.2"
edition = "2021"
license = "MIT"
description = "Integration for Crash ORM into rocket"
homepage = "https://github.com/Cr4shd3v/crash_orm"
documentation = "https://docs.rs/crash_orm_rocket/latest/crash_orm_rocket/"
repository = "https://github.com/Cr4shd3v/crash_orm"
readme = "Readme.md"
categories = ["database"]
keywords = ["async", "database", "framework", "orm"]

[dependencies]
crash_orm = { workspace = true }
rocket = { workspace = true, features = ["json"] }
crash_orm_rocket_derive = { workspace = true }

[dev-dependencies]
crash_orm_rocket = { path = ".", features = ["migration", "crud"] }
crash_orm_test = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[features]
default = []
migration = ["crash_orm/migration"]
crud = ["crash_orm_rocket_derive/crud"]