[package]
name = "crash_orm_rocket_derive"
version = "0.7.2"
edition = "2021"
license = "MIT"
description = "Macros for the integration for Crash ORM into rocket"
homepage = "https://github.com/Cr4shd3v/crash_orm"
documentation = "https://docs.rs/crash_orm_rocket_derive/latest/crash_orm_rocket_derive/"
repository = "https://github.com/Cr4shd3v/crash_orm"
readme = "Readme.md"
categories = ["database"]
keywords = ["async", "database", "framework", "orm", "macro"]

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }

[lib]
proc-macro = true

[features]
default = []
crud = []