[package]
name = "example_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crash_orm = { path = "../crash_orm" }
lazy_static = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async_once = { workspace = true }